<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">besmellah Water Ripple LWP</string>

    <!-- Name in Live Wallpaper Picker list -->
    <string name="lwp_name">besmellah Water Ripple LWP</string>

   

    
    <string-array  name="ripple_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array  name="ripple_size_value">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>
    <string-array  name="ripple_duration">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>
    <string-array  name="ripple_duration_value">
        <item>slow</item>
        <item>medium</item>
        <item>fast</item>
    </string-array>
     
    
    
      <string name="txt1">How to Set the wallpaper manually</string>
    <string name="txt2">Set the wallpaper</string>
    <string name="txt3">How to Set the wallpaper</string>  
    <string name="txt4"> Setting -> display  -> Wallpaper  -> Home screen -> live Wallpaper  -> besmellah Water Ripple LWP</string>
    
  <string name="txtrate1">\n if you like this application Please rating , rating help me to develop more Islamic Application \n </string>
   <string name="txtrate2">Rate the application</string>
   <string name="txtrate3">Remind me later</string>
   <string name="txtrate4">Do not ask again</string>
   <string name="txtrate5">Rate my application</string>
   <string name="txtrate6">Simultaneously press two times the back button to exit</string>

    <string name="txt5" >Enable Sound</string>
    <string name="txt6">Select This Option For Sweet Sound Of Water Drop On Screen Touch</string>
    <string name="txt7">Ripple Size</string>
    <string name="txt8">Change Size Of Ripples</string>
    <string name="txt9">Ripple Speed</string>
    <string name="txt10">Change Speed Of Ripples</string>
    
    
    
    <string name="txt11">Sound</string>
    <string name="txt12">Ripple Settings</string>
    
    
    <string name="txt13">Recommendations</string>
    
    <string name="txt14">please Rate us</string>
          <string name="txt15">Other Live Wallapper</string>
    
</resources>