<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="PicRipples"
    android:title="Settings">
    <PreferenceCategory android:title="@string/txt11">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sound_on"
            android:summary="@string/txt6"
            android:title="@string/txt5" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/txt12">
        <ListPreference
            android:defaultValue="small"
            android:entries="@array/ripple_size"
            android:entryValues="@array/ripple_size_value"
            android:key="ripple_size"
            android:summary="@string/txt8"
            android:title="@string/txt7" />
        <ListPreference
            android:defaultValue="slow"
            android:entries="@array/ripple_duration"
            android:entryValues="@array/ripple_duration_value"
            android:key="ripple_speed"
            android:summary="@string/txt10"
            android:title="@string/txt9" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/txt13">
        <Preference
            android:key="recommend_1"
            android:title="@string/txt14" />
    </PreferenceCategory>
</PreferenceScreen>